log/build_2024-08-18_23-18-22/yellow_sphere/stderr.log
  File "/home/anthony/Desktop/Assignment12/install/yellow_sphere/lib/python3.10/site-packages/yellow_sphere/follow_sphere.py", line 74
    self.get_logger().info("Turning 
                           ^
SyntaxError: unterminated string literal (detected at line 74)

